--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>BlogDeCafé</title>
+
+    <meta name="description" content="Página web de blog de café">
+
+    <!--Prefetch (Carga siguiente página a la que el usuario iria)-->
+    <link rel="prefetch" href="nosotros.html" as="document">
 
     <link rel="preload" href="css/normalize.css" as="style">
     <link rel="stylesheet" href="css/normalize.css">
 
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" crossorigin="crossorigin" as="font">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
@@ -44,7 +50,10 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog1.jpg" alt="imagen blog">
+                    <picture>
+                        <source loading="lazy" srcset="img/blog1.webp" type="image/webp">
+                        <img loading="lazy" src="img/blog1.jpg" alt="imagen blog">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
@@ -58,7 +67,10 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog2.jpg" alt="imagen blog">
+                    <picture>
+                        <source loading="lazy" srcset="img/blog2.webp" type="image/webp">
+                        <img loading="lazy" src="img/blog2.jpg" alt="imagen blog">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
@@ -73,7 +85,10 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog3.jpg" alt="imagen blog">
+                    <picture>
+                        <source loading="lazy" srcset="img/blog3.webp" type="image/webp">
+                        <img loading="lazy" src="img/blog3.jpg" alt="imagen blog">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
@@ -101,7 +116,7 @@
                         <span class="widget-curso__info">20</span>
                     </p>
 
-                    <a href="entrada.html" class="boton boton--secundario">Mas información</a>
+                    <a href="entrada.html" class="boton boton--secundario">Mas información sobre los cursos</a>
 
                 </li>
 
@@ -116,7 +131,7 @@
                         <span class="widget-curso__info">20</span>
                     </p>
 
-                    <a href="entrada.html" class="boton boton--secundario">Mas información</a>
+                    <a href="entrada.html" class="boton boton--secundario">Mas información sobre los cursos</a>
 
                 </li>
             </ul>
@@ -139,6 +154,9 @@
             </div>
         </div>
     </footer>
+
+    <!--Imagenes webp en CSS3-->
+    <script src="js/modernizr.js"></script>
 </body>
 
 </html>
